ajout du footer

--- a/scss/main.css
+++ b/scss/main.css
@@ -11967,5 +11967,17 @@ textarea.form-control-lg {
   }
 }
 html {
-  color: red;
+  position: relative;
+  min-height: 100%;
+}
+
+main {
+  margin-bottom: 250px;
+}
+
+footer.footer {
+  padding-top: 15px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
