--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,18 @@
 @import url("/node_modules/bootstrap-icons/font/bootstrap-icons.css");
 @import 'custom';
 
-html {
-  color : red;
+html{
+  position : relative;
+  min-height : 100%;
+}
+
+main{
+  margin-bottom : 250px;
+}
+
+footer.footer{
+  padding-top : 15px;
+  position : absolute;
+  bottom : 0px;
+  width : 100%;
 }
