--- a/scss/main.css
+++ b/scss/main.css
@@ -11989,6 +11989,7 @@ p {
 
 .hero-scene {
   position: relative;
+  margin-bottom: 20px;
 }
 .hero-scene::before {
   content: "";
@@ -12005,7 +12006,7 @@ p {
   position: relative;
 }
 .hero-scene .hero-scene-content {
-  height: 400px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12035,4 +12036,8 @@ p {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all 0.3s;
+}
+
+.form-label {
+  color: #906427;
 }/*# sourceMappingURL=main.css.map */
