--- a/scss/main.scss
+++ b/scss/main.scss
@@ -62,7 +62,7 @@ p{
 .image-card{
   position:relative;
   &:hover{
-      .titre-image{
+      .titre-image, .action-image-buttons{
           opacity: 1;
       }
       img{
@@ -82,6 +82,18 @@ p{
       opacity: 0;
       transition: all 0.3s;
   }
+
+  .action-image-buttons{
+    position : absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    opacity: 0;
+    transition: all 0.3s;
+  }
 }
 
 
@@ -89,4 +101,14 @@ p{
 
 .form-label{
   color : $primary;
+}
+
+//booking
+
+.allreservations{
+  a{
+      display: block;
+      color: $black;
+      padding:10px;
+  }
 }
