--- a/scss/main.css
+++ b/scss/main.css
@@ -11998,7 +11998,7 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../images/charente-maritime.jpg);
+  background-image: url(../images/repas.jpg);
   background-size: cover;
   filter: brightness(0.8);
 }
